crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__backtrace_force_attribute.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: formatted
---
impl ForcedBacktraceError {
    /// Creates a new error with default message.
    pub(crate) fn new() -> Self {
        Self {
            inner: ohno::OhnoCoreBuilder::new()
                .backtrace_policy(ohno::BacktracePolicy::Forced)
                .build(),
        }
    }
    /// Creates a new error with a specified error.
    pub(crate) fn caused_by(
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            inner: ohno::OhnoCoreBuilder::new()
                .backtrace_policy(ohno::BacktracePolicy::Forced)
                .error(error)
                .build(),
        }
    }
}
impl From<std::convert::Infallible> for ForcedBacktraceError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for ForcedBacktraceError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(ForcedBacktraceError), None)
    }
}
impl std::error::Error for ForcedBacktraceError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for ForcedBacktraceError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for ForcedBacktraceError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(ForcedBacktraceError))
            .field("inner", &self.inner)
            .finish()
    }
}
impl ohno::ErrorExt for ForcedBacktraceError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(ForcedBacktraceError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
