crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__basic_error_struct_expansion.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: formatted
---
impl TestError {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(message: impl Into<String>) -> Self {
        Self {
            message: message.into(),
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        message: impl Into<String>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            message: message.into(),
            inner: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
impl From<std::convert::Infallible> for TestError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for TestError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(TestError), None)
    }
}
impl std::error::Error for TestError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for TestError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for TestError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(TestError))
            .field("message", &self.message)
            .field("inner", &self.inner)
            .finish()
    }
}
impl ohno::ErrorExt for TestError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(TestError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
