crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__from_attribute_expansion.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: formatted
---
impl IoWrapperError {
    /// Creates a new error with default message.
    pub(crate) fn new() -> Self {
        Self {
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with a specified error.
    pub(crate) fn caused_by(
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            inner: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
impl From<std::io::Error> for IoWrapperError {
    fn from(error: std::io::Error) -> Self {
        Self {
            inner: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
impl From<std::convert::Infallible> for IoWrapperError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for IoWrapperError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(IoWrapperError), None)
    }
}
impl std::error::Error for IoWrapperError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for IoWrapperError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for IoWrapperError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(IoWrapperError)).field("inner", &self.inner).finish()
    }
}
impl ohno::ErrorExt for IoWrapperError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(IoWrapperError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
