crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__no_constructors_expansion.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: format_tokens(result)
---
impl From<std::convert::Infallible> for NoConstructorsError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for NoConstructorsError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(NoConstructorsError), None)
    }
}
impl std::error::Error for NoConstructorsError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for NoConstructorsError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for NoConstructorsError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(NoConstructorsError))
            .field("message", &self.message)
            .field("inner", &self.inner)
            .finish()
    }
}
impl ohno::ErrorExt for NoConstructorsError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(NoConstructorsError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
