crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__no_debug_attribute_expansion.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: format_tokens(result)
---
impl NoDebugError {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(message: impl Into<String>) -> Self {
        Self {
            message: message.into(),
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        message: impl Into<String>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            message: message.into(),
            inner: ohno::OhnoCore::from(error),
        }
    }
}
impl From<std::convert::Infallible> for NoDebugError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for NoDebugError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(NoDebugError), None)
    }
}
impl std::error::Error for NoDebugError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for NoDebugError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ohno::ErrorExt for NoDebugError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(NoDebugError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
