crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__ohno_core_middle_position_struct.snap
---
source: crates/ohno_macros/src/derive_error/tests/mod.rs
expression: format_tokens(result)
---
impl MiddlePositionError {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(message: impl Into<String>, code: impl Into<u32>) -> Self {
        Self {
            message: message.into(),
            code: code.into(),
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        message: impl Into<String>,
        code: impl Into<u32>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            message: message.into(),
            code: code.into(),
            inner: ohno::OhnoCore::from(error),
        }
    }
}
impl From<std::convert::Infallible> for MiddlePositionError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for MiddlePositionError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner.format_error(f, stringify!(MiddlePositionError), None)
    }
}
impl std::error::Error for MiddlePositionError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for MiddlePositionError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for MiddlePositionError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(MiddlePositionError))
            .field("message", &self.message)
            .field("inner", &self.inner)
            .field("code", &self.code)
            .finish()
    }
}
impl ohno::ErrorExt for MiddlePositionError {
    fn message(&self) -> String {
        self.inner.format_message(stringify!(MiddlePositionError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
